# asteroids

./: .dir-locals.el  main.py  pyproject.toml
asteroids/: constants.py  game.py  world.py
asteroids/ecs/: components.py  entities.py  enums.py  systems.py  ui.py  utils.py
