[tool.poetry]
name = "asteroids"
version = "0.1.0"
description = ""
authors = ["Tristan Kernan <tristanmkernan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"
esper = "^2.4.1"

[tool.poetry.dev-dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
